force-app/main/default/objects/Opportunity/fields/Acc_Channel_Manager_ub_Office__c.field-meta.xml
<CustomField>
    <fullName>Acc_Channel_Manager_ub_Office__c</fullName>
    <formula>text(Account.New_Channel_Manager__r.uB_Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acc Channel Manager ub Office</label>
    <type>Text</type>
</CustomField>