force-app/main/default/objects/Opportunity/fields/Acc_Link_Opp_Link__c.field-meta.xml
<CustomField>
    <fullName>Acc_Link_Opp_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Account.Id, Account.Name, &quot;_self&quot;)&amp;&quot;: &quot;&amp;HYPERLINK(&quot;/&quot;&amp;Id, Name, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acc Link: Opp Link</label>
    <type>Text</type>
</CustomField>