force-app/main/default/objects/Opportunity/fields/Acc_Name_Opp_Name__c.field-meta.xml
<CustomField>
    <fullName>Acc_Name_Opp_Name__c</fullName>
    <description>Used for Dashboards tables.</description>
    <formula>Account.Name &amp; &quot;: &quot; &amp; Name</formula>
    <label>Acc Name: Opp Name</label>
    <type>Text</type>
</CustomField>