force-app/main/default/objects/Opportunity/fields/Account_Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Channel_Manager__c</fullName>
    <description>Orig: Account.Channel_Manager__c</description>
    <formula>Account.New_Channel_Manager__r.FirstName&amp;&quot; &quot;&amp;Account.New_Channel_Manager__r.LastName</formula>
    <label>Account Channel Manager</label>
    <type>Text</type>
</CustomField>