force-app/main/default/objects/Opportunity/fields/Account_Channel_Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Channel_Manager_Id__c</fullName>
    <formula>Account.New_Channel_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Channel Manager Id</label>
    <type>Text</type>
</CustomField>