force-app/main/default/objects/Opportunity/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <formula>Account.BillingCountry</formula>
    <inlineHelpText>Field for use in views and consoles.</inlineHelpText>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>