force-app/main/default/objects/Opportunity/fields/Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email__c</fullName>
    <description>Used in Global Distribution , Email Template</description>
    <formula>Account.Owner.Email</formula>
    <label>Account Owner Email</label>
    <type>Text</type>
</CustomField>