force-app/main/default/objects/Opportunity/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <formula>Account.Owner.FirstName  &amp; &apos; &apos; &amp; Account.Owner.LastName</formula>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>