force-app/main/default/objects/Opportunity/fields/Account_Prio__c.field-meta.xml
<CustomField>
    <fullName>Account_Prio__c</fullName>
    <formula>case( Account.Priority__c , 
&quot;A&quot;,&quot;A&quot;, 
&quot;B&quot;,&quot;B&quot;, 
&quot;C&quot;,&quot;C&quot;, 
&quot;Z&quot;,&quot;Z&quot;, 
&quot;X&quot;)</formula>
    <label>Account Prio</label>
    <type>Text</type>
</CustomField>