force-app/main/default/objects/Opportunity/fields/Account_uB_Office__c.field-meta.xml
<CustomField>
    <fullName>Account_uB_Office__c</fullName>
    <formula>text ( Account.uB_Office__c )</formula>
    <inlineHelpText>uB Office of the Opportunity Account. Copied automatically.</inlineHelpText>
    <label>Account uB Office</label>
    <type>Text</type>
</CustomField>