force-app/main/default/objects/Opportunity/fields/AccountOwnerID__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerID__c</fullName>
    <description>Used to search for opportunities owned by different account owner</description>
    <formula>Account.OwnerId</formula>
    <label>AccountOwnerID</label>
    <type>Text</type>
</CustomField>