force-app/main/default/objects/Opportunity/fields/AMFocusChangeProposed__c.field-meta.xml
<CustomField>
    <fullName>AMFocusChangeProposed__c</fullName>
    <formula>IF( AND(NOT(ISPICKVAL(Focus__c, &apos;1 - Corporate&apos;)), Opp_Contribution_Unweighted__c &gt;= 500000) , &apos;1&apos;, IF( AND(NOT(ISPICKVAL(Focus__c, &apos;2 - Region&apos;)), AND(Opp_Contribution_Unweighted__c &lt; 500000,Opp_Contribution_Unweighted__c &gt;= 250000)) , &apos;2&apos;, IF( AND(OR(ISPICKVAL(Focus__c, &apos;1 - Corporate&apos;),ISPICKVAL(Focus__c, &apos;2 - Region&apos;)), Opp_Contribution_Unweighted__c &lt; 250000) , &apos;345&apos;,  LEFT(TEXT(Focus__c), 1))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Focus Change Proposed</label>
    <type>Text</type>
</CustomField>