force-app/main/default/objects/Opportunity/fields/AMFocusCombo__c.field-meta.xml
<CustomField>
    <fullName>AMFocusCombo__c</fullName>
    <formula>LEFT(TEXT(Focus__c), 1) &amp; IF(Account.Focus_Account__c, &apos;F&apos;, &apos;&apos;) &amp; IF(Account.Emerging_Account__c, &apos;E&apos;, &apos;&apos;)</formula>
    <label>AM Focus Combo</label>
    <type>Text</type>
</CustomField>