force-app/main/default/objects/Opportunity/fields/Annual_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Annual_Quantity__c</fullName>
    <description>Annual run rate of product. If</description>
    <inlineHelpText>Annual run rate. For single shot opportunities, use total quantity.
If Opportunity is converted from Lead, this is copied from Lead.</inlineHelpText>
    <label>Annual Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>