force-app/main/default/objects/Opportunity/fields/Application_type__c.field-meta.xml
<CustomField>
    <fullName>Application_type__c</fullName>
    <label>Old Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADAS</fullName>
            </value>
            <value>
                <fullName>Asset tracking</fullName>
            </value>
            <value>
                <fullName>ATM, POS, vending</fullName>
            </value>
            <value>
                <fullName>Aviation &amp; UAV</fullName>
            </value>
            <value>
                <fullName>Base station</fullName>
            </value>
            <value>
                <fullName>Car connectivity</fullName>
            </value>
            <value>
                <fullName>Digital camera</fullName>
            </value>
            <value>
                <fullName>Driving recorder</fullName>
            </value>
            <value>
                <fullName>Emergency call</fullName>
            </value>
            <value>
                <fullName>Femtocell</fullName>
            </value>
            <value>
                <fullName>GPS mouse</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Home entertainment</fullName>
            </value>
            <value>
                <fullName>In-car navigation</fullName>
            </value>
            <value>
                <fullName>Industrial terminal</fullName>
            </value>
            <value>
                <fullName>Insurance box</fullName>
            </value>
            <value>
                <fullName>Machine control</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>Metering</fullName>
            </value>
            <value>
                <fullName>Military &amp; government</fullName>
            </value>
            <value>
                <fullName>Mobile gaming</fullName>
            </value>
            <value>
                <fullName>Mobile hotspot and router</fullName>
            </value>
            <value>
                <fullName>Mobile phone</fullName>
            </value>
            <value>
                <fullName>Monitoring &amp; control</fullName>
            </value>
            <value>
                <fullName>Notebook, tablet</fullName>
            </value>
            <value>
                <fullName>PDA</fullName>
            </value>
            <value>
                <fullName>People &amp; animal tracking</fullName>
            </value>
            <value>
                <fullName>PND</fullName>
            </value>
            <value>
                <fullName>Radar detector</fullName>
            </value>
            <value>
                <fullName>Recreation &amp; sports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>