force-app/main/default/objects/Opportunity/fields/Approval_Process_Stage__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Stage__c</fullName>
    <description>Created the field for reporting purposes to create reports based on how many opportunities have been submitted/approved/rejected.</description>
    <label>Approval Process Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>