force-app/main/default/objects/Opportunity/fields/Approval_Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_Flag__c</fullName>
    <label>Approval Status Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approval_Status</valueSetName>
    </valueSet>
</CustomField>