force-app/main/default/objects/Opportunity/fields/Area_Design_Win__c.field-meta.xml
<CustomField>
    <fullName>Area_Design_Win__c</fullName>
    <inlineHelpText>Area with the highest contribution to the design win. Field used for contribution split.</inlineHelpText>
    <label>uB Office Design-Win</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Hongkong</fullName>
            </value>
            <value>
                <fullName>Taiwan</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Rest of APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>