force-app/main/default/objects/Opportunity/fields/Area_manufacturing__c.field-meta.xml
<CustomField>
    <fullName>Area_manufacturing__c</fullName>
    <inlineHelpText>Select one or several areas, in which the product is manufactured.</inlineHelpText>
    <label>uB Office Manufacturing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Hongkong</fullName>
            </value>
            <value>
                <fullName>Taiwan</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Rest of APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>