force-app/main/default/objects/Opportunity/fields/Automotive_RFQ_RFI__c.field-meta.xml
<CustomField>
    <fullName>Automotive_RFQ_RFI__c</fullName>
    <description>Link to DMS where the original document is stored. The finalised document should be attached to this Quotation under Notes &amp; Attachment.</description>
    <inlineHelpText>Link to DMS where the original document is stored.</inlineHelpText>
    <label>Automotive RFQ/RFI</label>
    <type>Url</type>
</CustomField>