force-app/main/default/objects/Opportunity/fields/Blanket_Order_Expected__c.field-meta.xml
<CustomField>
    <fullName>Blanket_Order_Expected__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Blanket order from OEM expected (controlled case inter-territory management).</inlineHelpText>
    <label>Blanket Order Expected</label>
    <type>Checkbox</type>
</CustomField>