force-app/main/default/objects/Opportunity/fields/CB_Lime_ID__c.field-meta.xml
<CustomField>
    <fullName>CB_Lime_ID__c</fullName>
    <description>ID of connectBlue CRM system &quot;lime&quot;</description>
    <inlineHelpText>ID of connectBlue CRM system &quot;lime&quot;</inlineHelpText>
    <label>CB Lime ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>