force-app/main/default/objects/Opportunity/fields/Condition_Budgetary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Condition_Budgetary_Quote__c</fullName>
    <description>The &quot;The&quot; at the end is part of the next sentence in the quotation template. Reason to have this word in is because otherwise the carriage return BR() would be truncated.</description>
    <formula>Case( Type_of_quotation__c,
&quot;Budgetary Quotation&quot;, &quot;This document is provided for budgetary purposes only and does not constitute any binding offer or agreement.&quot; &amp; BR() &amp; &quot;The&quot;,
&quot;The&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Adds a condition that is specific to budgetary quotations.</inlineHelpText>
    <label>Condition Budgetary Quote</label>
    <type>Text</type>
</CustomField>