force-app/main/default/objects/Opportunity/fields/Current_User_Internal__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Internal__c</fullName>
    <description>Used to flag the current user is an internal user, made for Process Builder to enable Chatter post.
OLD
NOT(OR(
$User.ProfileId = &quot;00eD000000160IL&quot;, /* Distributor Limited FAE */
$User.ProfileId = &quot;00eD00000015ehS&quot;, /* Distributor team */
$User.ProfileId = &quot;00eD00000015Trl&quot;, /* Gold Partner User */
$User.ProfileId = &quot;00eD00000015UEf&quot;, /* Distributor Standard */
$User.ProfileId = &quot;00eD000000160Nk&quot;, /* Distributor Standard FAE */
$User.ProfileId = &quot;00e57000001AvLY&quot;, /* Distributor RFD */
$User.ProfileId = &quot;00eD00000016DpY&quot;, /* Distributor team extended */
$User.ProfileId = &quot;00e57000001AvOm&quot;, /* Distributor RFD FAE */
$User.ProfileId = &quot;00e57000001tRer&quot;, /* Distributor SE FAE */
$User.ProfileId = &quot;00e57000001J6wk&quot;, /* Partner Community Distributor Standard */
$User.ProfileId = &quot;00e57000001J73W&quot;, /* Partner Community Distributor team extended */
$User.Id = &quot;005D0000003wh71&quot; /* API User */
))</description>
    <formula>AND(
  ISPICKVAL($User.UserType,&quot;Standard&quot;),
  $UserRole.Id &lt;&gt; &quot;00E57000001DHfr&quot;, /* RF Design (distributor) */
  $User.ProfileId &lt;&gt; &quot;00e2p000001opLR&quot;, /* Partner Base */
  $User.ProfileId &lt;&gt; &quot;00e2p000001opYk&quot;, /* Partner Base Quotation */
  $User.Id &lt;&gt; &quot;00557000006eQYE&quot; /* u-blox*/
)</formula>
    <inlineHelpText>Used to flag the current user is an internal user, made for Process Builder to enable Chatter post.</inlineHelpText>
    <label>Current User Internal</label>
    <type>Checkbox</type>
</CustomField>