force-app/main/default/objects/Opportunity/fields/Customer_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Customer_Jobs__c</fullName>
    <description>Added on request OpenIssues52917</description>
    <inlineHelpText>What jobs are required to accomplish tasks and problems of the customer?</inlineHelpText>
    <label>Customer Jobs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>