force-app/main/default/objects/Opportunity/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Added on request OpenIssues52917</description>
    <inlineHelpText>Describe the type of customer and his style</inlineHelpText>
    <label>Customer Type</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>