force-app/main/default/objects/Opportunity/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <inlineHelpText>When will customer select the supplier?</inlineHelpText>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>