force-app/main/default/objects/Opportunity/fields/Delivery_del__c.field-meta.xml
<CustomField>
    <fullName>Delivery_del__c</fullName>
    <inlineHelpText>In case of DAP or DDP add Place and Country manually (e.g. Shenzhen (CN))</inlineHelpText>
    <label>Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FCA Flextronics Althofen (AT)</fullName>
            </value>
            <value>
                <fullName>FCA Amkor ATP3 Binan (PH)</fullName>
            </value>
            <value>
                <fullName>FCA Thalwil (CH)</fullName>
            </value>
            <value>
                <fullName>DAP + add Place and Country manually, e.g. Shenzhen (CN)</fullName>
            </value>
            <value>
                <fullName>DDP + add Place and Country manually, e.g. Shenzhen (CN)</fullName>
            </value>
            <value>
                <fullName>EXW Althofen, Austria (Incoterms 2000)</fullName>
            </value>
            <value>
                <fullName>EXW Thalwil, Switzerland (Incoterms 2000) for samples, EXW Althofen, Austria (Incoterms 2000) for complete packing units</fullName>
            </value>
            <value>
                <fullName>EXW Biñan, Philippines (Incoterms 2000)</fullName>
            </value>
            <value>
                <fullName>EXW Thalwil, Switzerland (Incoterms 2000) for samples, EXW Biñan, Philippines (Incoterms 2000) for complete packing units</fullName>
            </value>
            <value>
                <fullName>EXW Thalwil, Switzerland (Incoterms 2000)</fullName>
            </value>
            <value>
                <fullName>EXW Reston VA, Unites States (Incoterms 2000)</fullName>
            </value>
            <value>
                <fullName>DDU</fullName>
            </value>
            <value>
                <fullName>DDP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>