force-app/main/default/objects/Opportunity/fields/Design_Review__c.field-meta.xml
<CustomField>
    <fullName>Design_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated through Process &quot;Design Review&quot;</description>
    <inlineHelpText>Checked automatically if the related Case (Type=Design Review) is closed.</inlineHelpText>
    <label>Design Review</label>
    <type>Checkbox</type>
</CustomField>