force-app/main/default/objects/Opportunity/fields/Design_win_Date__c.field-meta.xml
<CustomField>
    <fullName>Design_win_Date__c</fullName>
    <inlineHelpText>Date when the opportunity changed stage to Design-in, Prototype, Pre-production, or production</inlineHelpText>
    <label>Design-win Date</label>
    <type>Date</type>
</CustomField>