force-app/main/default/objects/Opportunity/fields/Distribution_Method__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Method__c</fullName>
    <description>Demand Shared or Fulfillment only.</description>
    <inlineHelpText>Demand Shared or Fulfillment only.</inlineHelpText>
    <label>Distribution Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demand Shared</fullName>
            </value>
            <value>
                <fullName>Fulfillment Only</fullName>
            </value>
            <value>
                <fullName>Quote Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>