force-app/main/default/objects/Opportunity/fields/Distribution_Partner__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Partner__c</fullName>
    <label>Distribution Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Future</fullName>
            </value>
            <value>
                <fullName>RFPD</fullName>
            </value>
            <value>
                <fullName>Digi-Key</fullName>
            </value>
            <value>
                <fullName>Mouser</fullName>
            </value>
            <value>
                <fullName>Symmetry Electronics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>