force-app/main/default/objects/Opportunity/fields/Distributor_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Project_ID__c</fullName>
    <description>Unique Identifier from Distributor for this Project.
15 character alphanumeric</description>
    <inlineHelpText>Unique Identifier from Distributor for this Project.</inlineHelpText>
    <label>Distributor Project ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>