force-app/main/default/objects/Opportunity/fields/DO_NOT_USE_Use_Restriction_del__c.field-meta.xml
<CustomField>
    <fullName>DO_NOT_USE_Use_Restriction_del__c</fullName>
    <inlineHelpText>IPR classification according to Terms &amp; Conditions</inlineHelpText>
    <label>DO NOT USE Use Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2G M2M</fullName>
            </value>
            <value>
                <fullName>2G Consumer</fullName>
            </value>
            <value>
                <fullName>2G Handset</fullName>
            </value>
            <value>
                <fullName>3G M2M</fullName>
            </value>
            <value>
                <fullName>3G Telematics</fullName>
            </value>
            <value>
                <fullName>3G Laptop</fullName>
            </value>
            <value>
                <fullName>3G External Modem</fullName>
            </value>
            <value>
                <fullName>3G PC/USB Modem</fullName>
            </value>
            <value>
                <fullName>3G Handset</fullName>
            </value>
            <value>
                <fullName>3G Other</fullName>
            </value>
            <value>
                <fullName>4G M2M</fullName>
            </value>
            <value>
                <fullName>4G Telematics</fullName>
            </value>
            <value>
                <fullName>4G Laptop</fullName>
            </value>
            <value>
                <fullName>4G External Modem</fullName>
            </value>
            <value>
                <fullName>4G PC/USB Modem</fullName>
            </value>
            <value>
                <fullName>4G Handset</fullName>
            </value>
            <value>
                <fullName>4G Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>