force-app/main/default/objects/Opportunity/fields/End_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (End Customer Account)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>