force-app/main/default/objects/Opportunity/fields/ES_vs_Production_date__c.field-meta.xml
<CustomField>
    <fullName>ES_vs_Production_date__c</fullName>
    <formula>IF(CloseDate -  Product_1__r.IP_Availability_Date__c &lt; 0, CloseDate -  Product_1__r.IP_Availability_Date__c , IF(CloseDate -  Product_2__r.IP_Availability_Date__c &lt; 0, CloseDate -  Product_2__r.IP_Availability_Date__c , IF(CloseDate -  Product_3__r.IP_Availability_Date__c &lt; 0, CloseDate -  Product_3__r.IP_Availability_Date__c , 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ES vs. Production date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>