force-app/main/default/objects/Opportunity/fields/Event_tradeshow_exhibition__c.field-meta.xml
<CustomField>
    <fullName>Event_tradeshow_exhibition__c</fullName>
    <description>List with upcoming tradeshows to connect to newly created opportunity</description>
    <inlineHelpText>List with upcoming tradeshows to connect to newly created opportunity</inlineHelpText>
    <label>Event, tradeshow, exhibition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMIV Kontakt.15</fullName>
            </value>
            <value>
                <fullName>ARM TechCon</fullName>
            </value>
            <value>
                <fullName>Canadian Wireless Trade Show</fullName>
            </value>
            <value>
                <fullName>CES 2016</fullName>
            </value>
            <value>
                <fullName>Connected Fleets</fullName>
            </value>
            <value>
                <fullName>CTIA 2015</fullName>
            </value>
            <value>
                <fullName>ELIV</fullName>
            </value>
            <value>
                <fullName>Embedded Conference Scandinavia</fullName>
            </value>
            <value>
                <fullName>Embedded World (EW)</fullName>
            </value>
            <value>
                <fullName>EPFL Forum</fullName>
            </value>
            <value>
                <fullName>ESC (Brazil)</fullName>
            </value>
            <value>
                <fullName>European Utility Week (EUW)</fullName>
            </value>
            <value>
                <fullName>IMTS2015</fullName>
            </value>
            <value>
                <fullName>ISGNSS</fullName>
            </value>
            <value>
                <fullName>ITS World Congres</fullName>
            </value>
            <value>
                <fullName>Japan IT Week Autumn</fullName>
            </value>
            <value>
                <fullName>Mobile World Congress (MWC)</fullName>
            </value>
            <value>
                <fullName>Small Cells Americas 2015</fullName>
            </value>
            <value>
                <fullName>SPS IPC Drives</fullName>
            </value>
            <value>
                <fullName>Taitronics 2015</fullName>
            </value>
            <value>
                <fullName>Telematics Brazil &amp; LATAM</fullName>
            </value>
            <value>
                <fullName>Telematics West Coast (TU)</fullName>
            </value>
            <value>
                <fullName>Wireless Congress</fullName>
            </value>
            <value>
                <fullName>YOW! Connected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>