force-app/main/default/objects/Opportunity/fields/Exhibition__c.field-meta.xml
<CustomField>
    <fullName>Exhibition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>List with upcoming tradeshows to connect to newly created opportunity</description>
    <inlineHelpText>List with upcoming tradeshows to connect to newly created opportunity</inlineHelpText>
    <label>Exhibition</label>
    <referenceTo>Exhibition__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>