force-app/main/default/objects/Opportunity/fields/FAE__c.field-meta.xml
<CustomField>
    <fullName>FAE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FAE for the opportunity. The value is populated from Account on Insert and can be changed.</description>
    <inlineHelpText>FAE for the opportunity. The value is populated from Account and can be updated any time.</inlineHelpText>
    <label>FAE</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard,PowerPartner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>