force-app/main/default/objects/Opportunity/fields/FAE_Email__c.field-meta.xml
<CustomField>
    <fullName>FAE_Email__c</fullName>
    <inlineHelpText>Email copied from FAE of Account</inlineHelpText>
    <label>FAE Email</label>
    <type>Email</type>
</CustomField>