force-app/main/default/objects/Opportunity/fields/First_Date_Of_1_Lost__c.field-meta.xml
<CustomField>
    <fullName>First_Date_Of_1_Lost__c</fullName>
    <label>First Date Of 1 Lost</label>
    <type>Date</type>
</CustomField>