force-app/main/default/objects/Opportunity/fields/First_Date_Of_3_Calling_on__c.field-meta.xml
<CustomField>
    <fullName>First_Date_Of_3_Calling_on__c</fullName>
    <label>First Date Of 3 Calling on</label>
    <type>Date</type>
</CustomField>