force-app/main/default/objects/Opportunity/fields/First_Date_Of_4_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>First_Date_Of_4_Evaluation__c</fullName>
    <label>First Date Of 4 Evaluation</label>
    <type>Date</type>
</CustomField>