force-app/main/default/objects/Opportunity/fields/First_Date_Of_5_Design_in__c.field-meta.xml
<CustomField>
    <fullName>First_Date_Of_5_Design_in__c</fullName>
    <label>First Date Of 5 Design-in</label>
    <type>Date</type>
</CustomField>